# firebase-auth-hosting-api-gateway-cloudrun

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api_gateway/: openapi2-api-backend.yaml
backend_app/: main.py
docs/: arch_design.drawio
vue-frontend/: index.html  package-lock.json  package.json
vue-frontend/src/components/: Api.vue
vue-frontend/src/plugins/: axios.js
